--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -20,4 +20,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="text3 "/>
+    <EditText
+        android:id="@+id/edit1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="학교명 입력"
+        android:layout_margin="20dp"/>
+    <TextView
+        android:id="@+id/textResult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="결과"/>
+    <Button
+        android:id="@+id/btnresult"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="결과 확인"/>
 </LinearLayout>
